--- a/Airtime.css
+++ b/Airtime.css
@@ -30,7 +30,7 @@ hr{
     background-color: rgb(248, 247, 247);
     overflow-Y: hidden;
     padding-top: 10px;
-    opacity:0.9;
+    opacity:1;
     transition-duration: 0.1s;
     
 }
@@ -58,6 +58,7 @@ hr{
     padding: 10px 10px 10px 10px;
     display: block;
     font-size: 20px;
+    font-weight: bolder;
 }
 
 .right-nav a{
@@ -65,7 +66,7 @@ hr{
     margin: 20px;
     color: black;
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: lighter;
+    
 }
 
 .side a{
