--- a/ADD-NEW/Add.css
+++ b/ADD-NEW/Add.css
@@ -100,10 +100,10 @@ li button{
 }
 .active {
   background-color: rgb(43, 126, 126) !important;
-  border-left: 3px solid white;
+  border-left: 4px solid white;
 }
 
-.display:not(:nth-child(3n+3)){
+.display:not(:nth-child(2)){
 	display: none;
 }
 
@@ -236,9 +236,11 @@ img{
 /* ///////////////////////////////////////////////////////////W A L L E T/////////////////////////////////////////////////////// */
 
 .wallet-div{
-   margin-top: 100px;
+   /* margin-top: 100px; */
    width: 100%;
    height: 100%;
+   background-color: rgb(255, 255, 255);
+   padding-top: 100px;
 }
  .wallet-div .main-view .flex-view{
 	display: flex;
@@ -312,7 +314,7 @@ img{
 
 .self-balance{
 	/* border: 1px solid black; */
-	background-color: rgb(247, 247, 247);
+	background-color: rgb(233, 233, 233);
 	width: 30%;
 	padding:  0em 0.5em;
 	box-shadow: 1px 1px 3px 0px;
@@ -552,4 +554,121 @@ img{
 	
 }
 
+
+/* /////////////////////////////////////////////////////D A S H B O A R D///////////////////////////////////////////////////////// */
+.dashboard-div{
+	padding-top: 100px;
+	background-color: rgb(235, 235, 235);
+	height: 100%;
+	
+}
+.dashboard-div .div-1{
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+	flex-wrap: wrap;
+	width: 100%;
+	margin-left: 100px;
+	/* margin: auto; */
+
+}
+.dashboard-div .div-1 .balance-box{
+	/* border: 1px solid black; */
+	background-color: white;
+	width: 20%;
+	padding: 0.5em 0em 0.5em 0.7em;
+	box-shadow: 1px 1px 3px 0px;
+	border-radius: 4px;
+
+}
+.dashboard-div .div-1 .balance-box .heading{
+	font-size: 20px;
+	/* font-weight: 700; */
+}
+
+.dashboard-div .div-1 .balance-box .amount{
+	font-size: 20px;
+	font-weight: 700;
+	text-align: center;
+}
+
+.dashboard-div .div-2{
+	margin-left: 350px;
+	margin-top: 100px;
+}
+.dashboard-div .div-2  .heading{
+	font-size: 20px;
+	font-weight: 700;
+}
+
+.dashboard-div .div-2  .detail{
+	font-size: 20px;
+}
+
+.dashboard-div .div-3{
+	/* margin-left: 350px; */
+	margin-top: 100px;
+	width: 80%;
+	margin-left: 280px;
+}
+
+.dashboard-div .div-3 .transaction-div .transaction-table table{
+	/* margin-top: 200px; */
+}
+
+.table{
+    padding: 20px;
+	text-align: center;
+    
+}
+
+#t01 th{
+    background-color:  rgb(60, 139, 139);
+    color: white;
+}
+
+#t01 tr {
+    background-color: rgb(243, 243, 243);
+    border-top: 1px solid rgb(150, 141, 141);
+    border-bottom: 1px solid rgb(150, 141, 141);
+    border-radius: 15px;
+}
+
+table, th, td{
+    border-collapse: collapse;
+}
+
+th,td{
+    padding: 10px;
+    text-align: center;
+}
+
+
+@media(max-width:1200px){
+	.dashboard-div .div-1{
+		margin-left: 0;
+	}
+	.dashboard-div .div-2{
+		margin-left: 100px;
+	}
+	.dashboard-div .div-3{
+		margin-left: 100px;
+	}
+}
+
+@media(max-width:800px){
+	.dashboard-div .div-1 .balance-box{
+		width: 80%;
+		margin-top: 30px;
+	}
+	.dashboard-div .div-3{
+		width: 100%;
+		margin-left: 0px;
+		overflow-x: scroll;
+	}
+	/* .dashboard-div .div-3 .transaction-div .transaction-table table{
+		overflow-x: scroll;
+	} */
+	
+}
 
