--- a/ADD-NEW/Add.css
+++ b/ADD-NEW/Add.css
@@ -619,7 +619,6 @@ img{
 .table{
     padding: 20px;
 	text-align: center;
-    
 }
 
 #t01 th{
@@ -661,14 +660,21 @@ th,td{
 		width: 80%;
 		margin-top: 30px;
 	}
+
+	.dashboard-div .div-2{
+		margin-left: 40px;
+
+	}
+
 	.dashboard-div .div-3{
 		width: 100%;
 		margin-left: 0px;
-		overflow-x: scroll;
+		/* overflow-x: scroll; */
 	}
-	/* .dashboard-div .div-3 .transaction-div .transaction-table table{
+	 .dashboard-div .div-3 .transaction-div .transaction-table{
+		 /* margin-left: 100px; */
 		overflow-x: scroll;
-	} */
+	} 
 	
 }
 
