--- a/ADD-NEW/Add.css
+++ b/ADD-NEW/Add.css
@@ -104,13 +104,13 @@ li button{
 
 }
 
-.display:not(:nth-child(2)){
+/* .display:not(:nth-child(2)){
 	display: none;
-}
+} */
 
-/* .display:not(:last-child){
+.display:not(:last-child){
 	display: none
-  } */
+  }
 
 .sidebar-content{
   padding-top: 2em;
@@ -126,6 +126,7 @@ li button{
 	img{
 		margin-left: 200px;
 	}
+	
 }
 
 @media(min-width:800px){
@@ -235,6 +236,38 @@ img{
 	border: 0px;
 	width: 30%;
 	cursor: pointer;
+}
+
+@media(min-width: 1200px){
+	.content{
+		margin-left: 100px;
+	}
+	.form{
+		padding: 10px;
+		width: 310px;
+		border-radius: 4px;
+	}
+	.select{
+		width: 330px;
+		border-radius: 4px;
+		padding: 10px;
+	}
+	#Add-row{
+		margin: 18px;
+		padding:  10px;
+		width: 35%;
+	}
+	#Add-intern{
+		margin: 22px;
+		padding:  10px; 
+		width: 35%;
+		cursor: pointer;
+	}
+	img{
+		width: 22rem;
+		margin-top: 40px;  
+	}
+
 }
 
 
@@ -350,10 +383,21 @@ img{
 	height: 45vh;
 	margin-left: 30%;
 	margin-top: 30px;
-}
-.main-view .message-div .message{
 	text-align: center;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+.main-view .message-div .phone-number{
+	background-color: rgb(255, 255, 255);
+	padding: 2em;
+	font-size: 18px;
+	width: 70%;
+	margin: auto;
+	font-weight: 700;
+}
+/* .main-view .message-div .message{
+	text-align: center;
+} */
 @media(max-width:1200px){
 	.wallet-div .main-view .flex-view{
 		margin-left: 0px;
@@ -600,6 +644,10 @@ img{
 	font-weight: 700;
 	text-align: center;
 }
+.dashboard-div .div-1 .balance-box .initial{
+	font-weight: 400;
+	text-align: center;
+}
 
 .dashboard-div .div-2{
 	border: 2px dashed rgb(60, 139, 139);
@@ -629,12 +677,32 @@ img{
 	border-radius: 6px;
 	cursor: pointer;
 }
+.fa-copy:active{
+	transform: scale(1.1);
+}
+
+/* .dashboard-div .div-2 .copy-success{
+	background-color: rgb(29, 29, 29);
+	color: white;
+	padding: 0.5em;
+	position: fixed;
+	text-align: center;
+	width: 50%;
+	z-index: 1;
+	top: 70px;
+} */
 
 .dashboard-div .div-3{
 	margin-top: 100px;
 	width: 80%;
 	margin-left: 280px;
 	padding-bottom: 50px;
+}
+.dashboard-div .div-3 .transaction-initial{
+   text-align: center;
+   background-color: rgb(231, 231, 231);
+   height: 10vh;
+   padding: 10%;
 }
 
 /* .dashboard-div .div-3 .transaction-div .transaction-table table{
@@ -668,7 +736,9 @@ img{
 	
 }
 
-
+table{
+	display: none;
+}
 .table{
     padding: 20px;
 	text-align: center;	
