--- a/ADD-NEW/Add.css
+++ b/ADD-NEW/Add.css
@@ -1,7 +1,7 @@
 body{
 	margin: 0 auto;
 	font-family: Arial, Helvetica, sans-serif;
-	/* overflow: hidden; */
+	overflow-x: hidden;
 }
 
 .navigation{
@@ -13,6 +13,10 @@ body{
 	width: 100%;
 	z-index: 1;
 	background-color: white;
+}
+.disburse{
+	cursor: pointer;
+	margin-left: -40px;
 }
 
 .left-nav{
@@ -158,7 +162,14 @@ li button{
 .content{
 	position: relative;
 	padding-top: 1em;
+	/* margin-top: 100px; */
 }
+/* .displaySection{
+	height: 100%;
+}
+.display{
+	height: 2000vh;
+} */
 
 @media(max-width:1200px) and (min-width:850px){
 	.content{
@@ -275,11 +286,10 @@ img{
 /* ///////////////////////////////////////////////////////////W A L L E T/////////////////////////////////////////////////////// */
 
 .wallet-div{
-   /* margin-top: 100px; */
    width: 100%;
    height: 100%;
    background-color: rgb(255, 255, 255);
-   padding-top: 100px;
+   padding-top: 120px;
 }
  .wallet-div .main-view .flex-view{
 	display: flex;
@@ -287,13 +297,15 @@ img{
 	justify-content: space-evenly;
 	flex-wrap: wrap;
 	width: 100%;
-	/* margin-top: 100px; */
+	height: 100%;
+	padding-top: -100px;
 	margin-left: 100px;
  }
 
  
  .wallet-div .main-view{
 	 width: 100%;
+	 height: 100%;
  }
 .wallet-btn-div{
 	width: 30%;
@@ -353,7 +365,7 @@ img{
 
 .self-balance{
 	/* border: 1px solid black; */
-	background-color: rgb(233, 233, 233);
+	background-color: rgb(245, 245, 245);
 	width: 30%;
 	padding:  0em 0.5em;
 	box-shadow: 1px 1px 3px 0px;
@@ -364,6 +376,14 @@ img{
 
 .self-balance .heading{
     font-size: 18px;
+}
+.self-balance .balance{
+	font-size: 27px;
+	text-align: center;
+}
+.self-balance .currency{
+	font-size: 23px;
+	text-align: center;
 }
 
 .fa-money-check-alt{
@@ -376,28 +396,25 @@ img{
 	color: rgb(187, 187, 187);
 }
 .main-view .message-div{
-	margin-top: 20px;
+	margin-top: 40px;
 	border: 1px solid rgb(43, 126, 126);
 	border-radius: 10px;
 	width: 50%;
-	height: 45vh;
 	margin-left: 30%;
-	margin-top: 30px;
 	text-align: center;
+	padding: 1em 1em 2em 1em;
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .main-view .message-div .phone-number{
-	background-color: rgb(255, 255, 255);
-	padding: 2em;
+	background-color: rgb(214, 214, 214);
+	padding: 1em;
 	font-size: 18px;
-	width: 70%;
+	width: 60%;
 	margin: auto;
 	font-weight: 700;
 }
-/* .main-view .message-div .message{
-	text-align: center;
-} */
+
 @media(max-width:1200px){
 	.wallet-div .main-view .flex-view{
 		margin-left: 0px;
@@ -422,6 +439,9 @@ img{
 		width: 80%;
 		margin: 0 auto;
 		margin-top: 30px;
+	}
+	.main-view .message-div .phone-number{
+		background-color: rgb(238, 238, 238);
 	}
 }
 
@@ -736,9 +756,6 @@ img{
 	
 }
 
-table{
-	display: none;
-}
 .table{
     padding: 20px;
 	text-align: center;	
@@ -751,15 +768,11 @@ table{
 }
 
 #t01 tr {
-    /* background-color: rgb(243, 243, 243); */
     border-top: 1px solid rgb(150, 141, 141);
     border-bottom: 1px solid rgb(150, 141, 141);
     border-radius: 15px;
 }
 
-/* td{
-	background-color: rebeccapurple;
-} */
 
 table, th, td{
 	border-collapse: collapse;
