--- a/Airtime.css
+++ b/Airtime.css
@@ -14,6 +14,9 @@ body{
     font-size: 18px;
     color: rgb(60, 139, 139);
 }
+.disburse{
+    cursor: pointer;
+}
 .right-nav{
     display: flex;
     justify-content: space-around;
