--- a/SIGN-UP-FORM/signup.css
+++ b/SIGN-UP-FORM/signup.css
@@ -15,6 +15,9 @@ body{
   padding: 0em 1em;
   background-color: white;
 }
+.disburse{
+  cursor: pointer;
+}
 /* /////////////////////////////////////////// */
 
 
@@ -26,6 +29,22 @@ body{
   background-color: white;
   background-size: cover; 
    margin-top: 30px;  
+}
+
+#error-message{
+  animation: Bounce;
+  animation-duration: 0.1s;
+  animation-iteration-count: 2;
+  position: relative;
+}
+
+@keyframes Bounce{
+  0% {
+    top: 10px;
+  }
+  50% {
+    top: -10px;
+  }
 }
 
 @media(max-width:800px){
