--- a/TRANSACTION/Transaction.css
+++ b/TRANSACTION/Transaction.css
@@ -3,131 +3,19 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/*th{
-    background-color: blue;
-    
-}*/
-
-
 .navigation{
     display: flex;
     justify-content: space-between;
-    
-}
-
-.right-nav{
-    display: flex;
-    justify-content: space-around;
-
-}
-
-hr{
-    margin-top: 20px;
-}
-
-
-.side-menu {
-    height: 80%;
-    width: 0;
-    z-index: 1;
-    top: 0;
-    right: 0;
-    position: fixed;
-    float: right;
-    background-color: rgb(248, 247, 247);
-    overflow-Y: hidden;
-    padding-top: 10px;
-    opacity:0.9;
-    transition-duration: 0.1s;
-    
-}
-
-.side{
-    text-align: center;
-    
-}
-.close{
-    text-align: right;  
-}
-
-.side-menu .btn-close{
-    top: 0;
-    font-size: 30px;    
-}
-
-
-.side-menu a{
-    padding: 10px 10px 10px 10px;
-    display: block;
-    font-size: 20px;
-}
-
-
-
-a{
-    text-decoration: none;
-    margin: 20px;
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: lighter;
-}
-
-li{
-    list-style: none;   
-}
-
-.fa-bars{
-    color: rgb(156, 149, 149);
-    border: 1px solid rgb(136, 123, 123);
-    padding: 7px;
-    border-radius: 5px; 
-    margin-right: 20px;   
-}
-
-
-#button{
-    padding: 5px 10px 5px 10px;
-    margin-right: 25px;
-    background-color: rgb(91, 97, 99);
-    color:rgb(253, 253, 253);
-    border-radius: 4px;
-}
-
-#side-button{
-    padding: 5px 10px 5px 10px;
-    margin: 30px;
-    background-color: rgb(91, 97, 99);
-    color: rgb(253, 253, 253);
-    border-radius: 4px;
-}
-
-
-
-
-@media(min-width: 700px) {
-    #icon{
-        display: none;
-    }   
-}
-
-
-@media(max-width:700px) {
-    .nav-content{
-        display: none;
-    }
-    hr{
-        margin-top: 5px;
-    }
-}
-
-
-
-
-
-.basic-info{
-    display: flex;
-    align-items: center;
-}
+    box-shadow: 0px 2px 4px 0px  rgb(158, 155, 155);
+    padding: 0.5em;
+    background-color: white;
+  }
+  .disburse{
+    cursor: pointer;
+    font-family: cursive;
+    font-size: 25px;
+    color: rgb(60, 139, 139);
+  }
 
 
 .table{
@@ -137,12 +25,13 @@ li{
 }
 
 #t01 th{
-    background-color: rgb(1, 179, 233);
+    background-color: rgb(43, 126, 126);
     color: white;
+    padding: 1em;
 }
 
 #t01 tr {
-    background-color: rgb(243, 243, 243);
+    /* background-color: rgb(243, 243, 243); */
     border-top: 1px solid rgb(150, 141, 141);
     border-bottom: 1px solid rgb(150, 141, 141);
     border-radius: 15px;
@@ -150,12 +39,17 @@ li{
 
 table, th, td{
     border-collapse: collapse;
-}
-
-th,td{
-    padding: 10px;
+    padding: 1em;
     text-align: center;
 }
+
+table tbody tr:nth-child(even){
+    background-color: rgb(110, 110, 110);
+    color: rgb(226, 226, 226);
+	/* box-shadow: 1px 0px 3px 0px; */
+}
+
+
 
 .content{
     margin: 0px;
@@ -163,39 +57,39 @@ th,td{
 
 
 h1{
-    color: rgb(75, 75, 141);
+    color: rgb(65, 65, 65);
     padding: 20px;
 }
 
+.no-transaction{
+    text-align: center;
+    background-color: rgb(177, 177, 177);
+    padding: 5em 0em;
+    width: 90%;
+    color: white;
+    font-size: 18px;
+    margin: auto;
+}
 
-/*@media(max-width:700px) {
-    #narration{
-        display: none;
-    }
-    #narrate{
-        display: none;
-    }
+ .back{
+    text-align: center;   
+}
+.content button{
+    color: white;
+    background-color: rgb(14, 14, 14);
+    padding: 0.7em 3em;
+    border: none;
+    cursor: pointer;
+}
 
-
-    #category{
-        display: none;
-    }
-    #categorate{
-        display: none;
-    }
-
-    .content{
-        margin: 0px;
-    }
-    .table{
-        padding: 10px;
-        
-    }
-}*/
-
-@media(max-width:700px) {
+@media(max-width:800px) {
 .table{
     overflow-x: scroll;  
     padding: 5px;  
+}
+.no-transaction{
+    padding: 4em 0em;
+    width: 100%;
+    font-size: 16px;
 }
 }
