--- a/SIGN-UP-FORM/signup.css
+++ b/SIGN-UP-FORM/signup.css
@@ -20,7 +20,6 @@ body{
 }
 /* /////////////////////////////////////////// */
 
-
 .form{
   width: 40%;
   margin: auto;
@@ -36,7 +35,10 @@ body{
   animation-duration: 0.1s;
   animation-iteration-count: 2;
   position: relative;
+  display: none;
+  color: red;
 }
+
 
 @keyframes Bounce{
   0% {
@@ -60,8 +62,6 @@ body{
   }
 }
 
-
-
 .first {
   text-align: center;
 }
@@ -73,15 +73,6 @@ body{
   border: 1px solid rgb(114, 114, 114);
   outline: black;
 }
-
-/* .password-space{
-  padding: 10px;
-  width: 100%;
-  border: 1px solid rgb(114, 114, 114);
-  border-radius: 4px;
-  outline: black;
-} */
-
 
 .input-container{
   display: flex;
@@ -122,16 +113,52 @@ body{
   cursor: pointer; 
 }
 
-#sign-up{
+#signup-button{
   padding: 7px;
   color: white;
   background-color: rgb(95, 89, 89) ;
-  /* background-color: rgb(81, 156, 81) ; */
   cursor: not-allowed;
   width: 100%;
   font-size: 20px;
   border-radius: 10px;  
   opacity: 0.7;  
+  outline: none;
+}
+
+.signup-success{
+  background-color: rgb(65, 65, 65);
+  text-align: center;
+  padding: 1em;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  position: relative;
+  animation: success;
+  animation-duration: 0.3s;
+  display: none;
+}
+
+.validation-error{
+  background-color: rgb(228, 151, 151);
+  color: rgb(0, 0, 0);
+  text-align: center;
+  padding: 0.3em;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  display: none;
+}
+
+@keyframes success{
+  0%{
+   padding: 0em; 
+   top: 2px;
+  }
+  50%{
+    padding: 0.5em;
+    top: 0px;
+  }
+  100%{
+    padding: 1em;
+    top: 2px;
+  }
 }
 
 .opacity {
@@ -147,7 +174,6 @@ body{
   display: flex;
   align-items: center;
   justify-content: space-around;
-  /* flex-wrap: wrap; */
 }
 #facebook{
     color: white;
