update login validation

--- a/Airtime.css
+++ b/Airtime.css
@@ -222,7 +222,7 @@ img{
 
 @media(max-width:700px) {
     .nav-content{
-        display: none;
+        display: none !important; 
     }
     
     img{
