--- a/Airtime.css
+++ b/Airtime.css
@@ -152,6 +152,20 @@ li{
     display: none;
     animation: success 1s;
 }
+/* .body .logout-status{
+    background-color: black;
+    color: white;
+    font-size: 18px;
+    width: 250px;
+    position: fixed;
+    padding-left: 1em;
+    z-index: 100;
+    top: 10px;
+    right: 0;
+    display: none;
+    animation: success 1s;
+
+} */
  .form .login-error p{
     background-color: rgb(238, 89, 89);
     color: white;
