--- a/ADD-NEW/Add.css
+++ b/ADD-NEW/Add.css
@@ -108,13 +108,13 @@ li button{
 
 }
 
-.display:not(:nth-child(3)){
+/* .display:not(:nth-child(3)){
 	display: none;
-}
+} */
 
-/* .display:not(:last-child){
+.display:not(:last-child){
 	display: none
-  } */
+  }
 
 .sidebar-content{
   padding-top: 2em;
@@ -282,8 +282,6 @@ img{
 	}
 
 }
-
-
 
 /* ///////////////////////////////////////////////////////////W A L L E T/////////////////////////////////////////////////////// */
 
@@ -562,7 +560,26 @@ img{
 	font-size: 18px;
 }
 
+.wallet-success{
+	background-color: green;
+	position: fixed;
+	z-index: 1;
+	right: 0;
+	top: 30px;
+	padding: 0em 1em;
+	color: white;
+	animation: open 1.5s;
+	display: none;
+}
 
+@keyframes open{
+    0%{
+        right: -500px;
+    }
+    100%{
+        right: 0px
+    }
+}
 
 
 @media(min-width:800px){
@@ -852,3 +869,47 @@ table tbody tr:nth-child(even){
 
 }
 
+
+
+/* ///////////// spinner/////////////// */
+
+.loading-overlay{
+	background-color: black;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	opacity: 0.99;
+	color: black;
+	display: none;
+}
+
+.loading:empty {
+	position: fixed;
+	top: 50%;
+	left: 55%;
+	width: 3em;
+	height: 3em;
+	border-right: 2px solid  rgb(0, 0, 0) ;
+	border-left: 2px solid rgb(255, 255, 255) ;
+	border-top: 2px solid white;
+	border-bottom: 2px solid white;
+	border-radius: 50px;
+	animation: load 2s infinite linear;
+  }
+  
+  @keyframes load {
+	0% {
+  transform: rotate(0deg)}
+	
+	100% {
+  transform: rotate(360deg)}
+  }
+
+  @media(max-width:800px) {
+	.loading:empty {
+	  top: 50%;
+	  left: 49%;
+	  width: 2em;
+	  height: 2em;
+	}
+  }
