updated my folder

--- a/ADD-NEW/Add.css
+++ b/ADD-NEW/Add.css
@@ -112,10 +112,16 @@ li button{
 	display: none;
 } */
 
-.display:not(:last-child){
+/* .display:not(:last-child){
 	display: none
-  }
+  } */
 
+  .display:not(:nth-child(3n+3)){
+	display: none;
+}
+
+  
+  
 .sidebar-content{
   padding-top: 2em;
 }
