--- a/TRANSACTION/Transaction.css
+++ b/TRANSACTION/Transaction.css
@@ -34,21 +34,26 @@ body{
     /* background-color: rgb(243, 243, 243); */
     border-top: 1px solid rgb(150, 141, 141);
     border-bottom: 1px solid rgb(150, 141, 141);
-    border-radius: 15px;
+    /* border-radius: 15px; */
 }
 
 table, th, td{
     border-collapse: collapse;
-    padding: 1em;
+    padding: 2.5em;
     text-align: center;
 }
 
 table tbody tr:nth-child(even){
-    background-color: rgb(110, 110, 110);
-    color: rgb(226, 226, 226);
+    background-color: rgb(252, 252, 252);
+    color: rgb(7, 7, 7);
 	/* box-shadow: 1px 0px 3px 0px; */
 }
 
+table tbody tr:nth-child(odd){
+   background-color: rgb(244, 247, 247);
+  color: rgb(14, 13, 13);
+  box-shadow: 6px 0px 3px 0px white;
+}
 
 
 .content{
@@ -71,7 +76,7 @@ h1{
     margin: auto;
 }
 
- .back{
+ .back-tryAgain{
     text-align: center;   
 }
 .content button{
@@ -82,14 +87,67 @@ h1{
     cursor: pointer;
 }
 
+.error-message{
+  text-align: center;
+  color: rgb(107, 107, 107);
+  
+}
+
 @media(max-width:800px) {
 .table{
-    overflow-x: scroll;  
-    padding: 5px;  
+  overflow-x: scroll;
+  padding: 5px;  
 }
 .no-transaction{
-    padding: 4em 0em;
-    width: 100%;
-    font-size: 16px;
+  padding: 4em 0em;
+  width: 100%;
+  font-size: 16px;
 }
+
+table, th, td{
+  padding: 0.5em;
+  font-size: 17px;
 }
+
+}
+
+
+.loading-overlay{
+	/* background-color: rgb(172, 172, 172); */
+	width: 100%;
+	height: 50vh;
+	color: rgb(77, 77, 77);
+	/* display: none; */
+}
+
+.loading:empty {
+	position: relative;
+	top: 30%;
+	left: 47%;
+	width: 5em;
+	height: 5em;
+	border-right: 4px solid  rgb(53, 53, 53) ;
+	border-left: 4px solid rgb(66, 66, 66) ;
+	border-top: 4px solid rgb(228, 228, 228);
+	border-bottom: 4px solid rgb(207, 205, 205);
+	border-radius: 50px;
+	animation: load 2s infinite linear;
+  /* display: none; */
+  }
+  
+  @keyframes load {
+	0% {
+  transform: rotate(0deg)}
+	
+	100% {
+  transform: rotate(360deg)}
+  }
+
+  @media(max-width:800px) {
+	.loading:empty {
+	  top: 30%;
+	  left: 43%;
+	  width: 3em;
+	  height: 3em;
+	}
+  }
