--- a/ADD-NEW/Add.css
+++ b/ADD-NEW/Add.css
@@ -108,17 +108,18 @@ li button{
 
 }
 
-/* .display:not(:nth-child(3)){
+/* .display:not(:nth-child(1)){
 	display: none;
 } */
 
-/* .display:not(:last-child){
+ /* .display:not(:last-child){
 	display: none
   } */
 
-  .display:not(:nth-child(3n+3)){
+  
+  /* .display:not(:nth-child(3n+3)){
 	display: none;
-}
+}  */
 
   
   
@@ -158,7 +159,7 @@ li button{
 			display: none;
 	}
 	.add-flex{
-			padding-left: 1em;
+	  padding-left: 1em;
 	}
     
 }
@@ -185,6 +186,49 @@ li button{
 		margin-left: 200px;
 	}
 }
+
+/* //////////////////////////////////////////////////////////P R O F I L E////////////////////////////////////////////////////////////////////////// */
+
+.displaySection > .display > .first-div{
+  background-color: rgb(241, 241, 241);
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+  
+}
+
+.displaySection > .display > .first-div .profile-div {
+ position: relative;
+ top: 100px;
+ margin-left: 10%;
+ margin-right: 4%;
+ border: 1px solid black; 
+}
+
+.displaySection > .display > .first-div .profile-div .flex-div{
+  display: flex;
+  flex: content;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+ }
+
+ .displaySection > .display > .first-div .profile-div .flex-div .left-div {
+  border: 1px solid black;
+ }
+
+ .displaySection > .display > .first-div .profile-div .flex-div .right-div {
+  border: 1px solid black;
+ }
+
+
+
+
+
+
+
+
 /* /////////////////////////////////////////////////////////////A D D  CU S T O M E R//////////////////////////////////////////////////////// */
 
 .add-flex{
@@ -297,7 +341,9 @@ img{
    background-color: rgb(255, 255, 255);
    padding-top: 120px;
 }
- .wallet-div .main-view .flex-view{
+
+
+.wallet-div .main-view .flex-view{
 	display: flex;
 	align-items: center;
 	justify-content: space-evenly;
@@ -655,10 +701,11 @@ img{
 
 
 /* /////////////////////////////////////////////////////D A S H B O A R D///////////////////////////////////////////////////////// */
+
 .dashboard-div{
 	padding-top: 100px;
 	background-color: rgb(241, 241, 241);
-	height: 100%;
+	/* height: 100%; */
 	
 }
 .dashboard-div .div-1{
@@ -750,9 +797,6 @@ img{
    padding: 10%;
 }
 
-/* .dashboard-div .div-3 .transaction-div .transaction-table table{
-	
-} */
 
 .transaction-button{
 	display: flex;
