updated my files

--- a/ADD-NEW/Add.css
+++ b/ADD-NEW/Add.css
@@ -108,9 +108,9 @@ li button{
 
 }
 
-/* .display:not(:nth-child(1)){
+.display:not(:nth-child(1)){
 	display: none;
-} */
+}
 
  /* .display:not(:last-child){
 	display: none
@@ -189,811 +189,21 @@ li button{
 
 /* //////////////////////////////////////////////////////////P R O F I L E////////////////////////////////////////////////////////////////////////// */
 
-.displaySection > .display > .first-div{
-  background-color: rgb(243, 242, 242);
-  height: 120vh;
-  width: 100%;
-  position: absolute;
-  
-}
-
-.displaySection > .display > .first-div .profile-div {
- position: relative;
- top: 100px;
- margin-left: 10%;
- margin-right: 4%;
- border: 1px solid black; 
-}
-
-.displaySection > .display > .first-div .profile-div .update-profile {
-	width: 50%;
-	margin: auto;
-	background-color: blanchedalmond;
-}
-
-.displaySection > .display > .first-div .profile-div .update-profile > .update-form > form >input {
-	padding-left: 10px;
-	padding-bottom: 10px;
-	height: 20px;
-	border: 1px solid rgb(133, 133, 133);
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	-ms-border-radius: 5px;
-	-o-border-radius: 5px;
-}
-
-
-.displaySection > .display > .first-div .profile-div .update-form form{
-	display: flex;
-	flex-direction: column;
-}
-
-.displaySection > .display > .first-div .profile-div .update-profile form button {
-	position: relative;
-	width: 100px;
-	left: 0px;
-	
-	
-}
-
-
-.displaySection > .display > .first-div .profile-div .flex-div{
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  padding: 20px;
- }
-
- .displaySection > .display > .first-div .profile-div .flex-div .left-div {
-  border: 1px solid black;
-  flex: 0.3;
- }
-
- .displaySection > .display > .first-div .profile-div .flex-div .left-div .avatar {
-  border: 1px solid black;
-  width: 100%;
-  position: relative;
- }
-
- .displaySection > .display > .first-div .profile-div .flex-div .left-div .avatar .edit-icon {
-	position: absolute;
-	background-color: rgb(255, 255, 255);
-	top: 68%;
-	left: 86%;
-	font-size: 15px;
-	box-shadow: 0px 0px 6px 0px;
-	padding: 5px;
-	border-radius: 50%;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	-ms-border-radius: 50%;
-	-o-border-radius: 50%;
-}
-
- .displaySection > .display > .first-div .profile-div .flex-div .left-div .avatar img {
- 
-  width: 200px;
-  text-align: center;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
-}
-
- .displaySection > .display > .first-div .profile-div .flex-div .right-div {
-  border: 1px solid black;
-  flex: 0.3;
- }
-
-
-
-@media(min-width: 1200px){
-	.displaySection > .display > .first-div .profile-div .flex-div .left-div .avatar .edit-icon {
-		top: 70%;
-		left: 70%;
-	}
-}
 
 
 
 
 /* /////////////////////////////////////////////////////////////A D D  CU S T O M E R//////////////////////////////////////////////////////// */
 
-.add-flex{
-	display: flex;
-	align-items: center;
-	justify-content: space-evenly;
-}
 
-.Add-new{
-  margin-top: 80px;
-}
-
-.Add-new h1{
-  color: rgb(60, 139, 139);
-}
-
-.Add-new p {
-  font-size: 18px;
-}
-
- .customer-image{
-	width: 15rem;
-	margin-top: 40px;   
-}
-
-@media(max-width:800px) {
-	.customer-image{
-		display: none;
-	}
-	.displaySection > .display > .first-div .profile-div .update-profile {
-		width: 100%;
-	}
-}
-
-.form{
-	margin: 20px;
-	padding: 7px;
-	width: 250px;
-	border-radius: 3px;
-	border: 1px solid   rgb(60, 139, 139);
-}
-.select{
-	width: 260px;
-	margin: 20px;
-	border-radius: 3px;
-	border: 1px solid  rgb(54, 136, 136);
-	padding: 7px;
-	background-color: rgb(236, 231, 231);
-}
-#Add-row{
-	margin: 15px;
-	padding:  10px;
-	color: rgb(49, 155, 155); 
-	background-color: white; 
-	border: 1px solid rgb(39, 163, 163); 
-	font-weight: bolder;
-	width: 35%;
-}
-
-#Add-row:hover{
-	background-color: rgb(94, 95, 95);
-	color: white;
-}
-
-#Add-intern{
-	margin: 20px;
-	padding:  10px; 
-	background-color: rgb(51, 129, 129); 
-	color: white; 
-	border: 0px;
-	width: 30%;
-	cursor: pointer;
-}
-
-@media(min-width: 1200px){
-	.content{
-		margin-left: 100px;
-	}
-	.form{
-		padding: 10px;
-		width: 310px;
-		border-radius: 4px;
-	}
-	.select{
-		width: 330px;
-		border-radius: 4px;
-		padding: 10px;
-	}
-	#Add-row{
-		margin: 18px;
-		padding:  10px;
-		width: 35%;
-	}
-	#Add-intern{
-		margin: 22px;
-		padding:  10px; 
-		width: 35%;
-		cursor: pointer;
-	}
-	.customer-image{
-		width: 22rem;
-		margin-top: 40px;  
-	}
-
-}
 
 /* ///////////////////////////////////////////////////////////W A L L E T/////////////////////////////////////////////////////// */
 
-.wallet-div{
-   width: 100%;
-   height: 100%;
-   background-color: rgb(255, 255, 255);
-   padding-top: 120px;
-}
 
-
-.wallet-div .main-view .flex-view{
-	display: flex;
-	align-items: center;
-	justify-content: space-evenly;
-	flex-wrap: wrap;
-	width: 100%;
-	height: 100%;
-	padding-top: -100px;
-	margin-left: 100px;
- }
-
- 
- .wallet-div .main-view{
-	 width: 100%;
-	 height: 100%;
- }
-.wallet-btn-div{
-	width: 30%;
-	
-}
-.wallet-btn-div  .button-div{
-	margin-top: 10px;
-	display: flex;
-	justify-content: space-between;
-}
-
-.button-div .create {
-	 cursor: pointer;
-	 background-color: white;
-	 border: 1px solid rgb(0, 0, 0);
-	 padding: 0.4em 0.3em;
-	 border-radius: 4px;
-	 width: 30%;
-}
-.button-div .create:hover{
-	background-color: rgb(211, 211, 211);
-}
-
-.button-div .fund{
-	cursor: pointer;
-	background-color: rgb(43, 126, 126);
-	color: white;
-	border-radius: 4px;
-	width: 30%;
-	border: 1px solid white;
-	padding: 0.4em 0.3em;
-}
-
-.wallet-balance{
-	border: 1px solid black;
-	background-color: rgb(53, 53, 53);
-	border-radius: 6px;
-	color: white;
-	width: 100%;
-	padding: 0em 0.5em;
-	margin-left: -10px;	
-}
-
-.wallet-balance .details{
- text-align: center;
- padding:  0em 0.5em;
-
-}
-.wallet-balance .details .balance{
-	font-size: 27px;
-}
-
-.wallet-balance .details .currency{
-	font-size: 23px;
-	color: rgb(206, 206, 206);
-}
-
-.self-balance{
-	/* border: 1px solid black; */
-	background-color: rgb(245, 245, 245);
-	width: 30%;
-	padding:  0em 0.5em;
-	box-shadow: 1px 1px 3px 0px;
-	border-radius: 6px;
-	margin-top: -35px;
-
-}
-
-.self-balance .heading{
-    font-size: 18px;
-}
-.self-balance .balance{
-	font-size: 27px;
-	text-align: center;
-}
-.self-balance .currency{
-	font-size: 23px;
-	text-align: center;
-}
-
-.fa-money-check-alt{
-	color:  rgb(187, 187, 187);
-	text-align: center;
-}
-.self-balance .details{
-	text-align: center;
-	padding: 1em  0em;
-	color: rgb(187, 187, 187);
-}
-.main-view .message-div{
-	margin-top: 40px;
-	border: 1px solid rgb(43, 126, 126);
-	border-radius: 10px;
-	width: 50%;
-	margin-left: 30%;
-	text-align: center;
-	padding: 1em 1em 2em 1em;
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-.main-view .message-div .phone-number{
-	background-color: rgb(214, 214, 214);
-	padding: 1em;
-	font-size: 18px;
-	width: 60%;
-	margin: auto;
-	font-weight: 700;
-}
-
-@media(max-width:1200px){
-	.wallet-div .main-view .flex-view{
-		margin-left: 0px;
-	}
-	.self-balance .details{
-		text-align: center;
-	}	
-	.main-view .message-div{
-		width: 80%;
-		margin-left: 10%;
-	}
-}
-@media(max-width:800px){
-	.wallet-btn-div{
-		width: 80%;
-	}
-	.self-balance{
-		width: 80%;
-		margin-top: 25px;
-	}
-	.main-view .message-div{
-		width: 80%;
-		margin: 0 auto;
-		margin-top: 30px;
-	}
-	.main-view .message-div .phone-number{
-		background-color: rgb(238, 238, 238);
-	}
-}
-
-
-/* //////////////////////////CREATE WALLET MODAL//////////////////////// */
-.modal{
-	background-color: black;
-	width: 100%;
-	height: 200vh;
-	z-index: 1;
-	position: fixed;
-	opacity: 0.95;
-	margin-top: -160px;
-	display: none;
-}
-
-
-.create-wallet-modal{
-	background-color: rgb(245, 245, 245);
-	position: fixed;
-	z-index: 1;
-	top: 200px;
-	left: 40%;
-	padding:  2em ;
-	border-radius: 3px;
-}
-.create-paragraph{
-	text-align: center;
-	font-weight: 700;
-	font-size: 25px;
-
-}
-
-.create-wallet-modal label{
-	display: inline-block;
-	float: left;
-	clear: left;
-	text-align: right;
-	padding: 0.6em 1em;
-	margin-top: 10px;
-	
-}
-
-.create-wallet-modal input{
-	display: inline-block;
-	float: right;
-	padding: 0.6em 2em;
-	margin-top: 10px;
-	border-radius: 4px;
-	border: 1px solid rgb(182, 182, 182);
-	outline: none;
-	
-}
-
-.create-wallet-modal button{
-	position: relative;
-	/* left: 250px; */
-	float: right;
-	cursor: pointer;
-	margin-top: 15px;
-	width: 30%;
-	border-radius: 4px;
-	border: 1px solid rgb(145, 145, 145);
-	padding: 0.2em 1em;	
-}
-
-.create-wallet-modal button:hover{
-	transform: scale(1.1);
-	background-color: rgb(44, 44, 44);
-	color: white;
-}
-
- .close{
-	 position: relative;
-	float: right;
-	font-size: 30px;
-	margin-top: -23px;
-	left: 20px;
-	cursor: pointer;
-}
-.fund-paragraph{
-	text-align: center;
-	font-size: 25px;
-}
-
-.fund-wallet-modal{
-	background-color: white;
-	position: fixed;
-	z-index: 1;
-	top: 200px;
-	left: 40%;
-	padding:  2em;
-	width: 30%; 
-}
-
-.fund-wallet-modal input{
-	/* padding: 10px  4em ; */
-	width: 100%;
-	border: 1px solid  rgb(43, 126, 126);
-	padding: 1em 0.3em;
-	margin-bottom: 30px;
-	outline: none;
-	border-radius: 3px;
-}
-.fund-wallet-modal button{
-	position: relative;
-	width: 70%;
-	margin:  0 auto;
-	padding: 0.3em;	
-	margin-left: 18%;
-	cursor: pointer;
-	background-color: rgb(43, 126, 126);
-	color: white;
-	border: 1px solid rgb(43, 126, 126);
-	border-radius: 3px;
-	font-size: 18px;
-}
-
-.wallet-success{
-	background-color: green;
-	position: fixed;
-	z-index: 1;
-	right: 0;
-	top: 30px;
-	padding: 0em 1em;
-	color: white;
-	animation: open 1.5s;
-	display: none;
-}
-
-@keyframes open{
-    0%{
-        right: -500px;
-    }
-    100%{
-        right: 0px
-    }
-}
-
-
-@media(min-width:800px){
-	 .close{
-		display: none;	
-	}
-}
-
-@media(max-width:800px){
-	.create-wallet-modal{
-		left: 18%;	
-	}
-	.fund-wallet-modal{
-		width: 50%;
-		left: 20%;
-	}
-}
-
-@media(max-width:500px){
-	.create-wallet-modal{
-		left: 6%;	
-	}
-	.create-wallet-modal label{
-		float: center;
-		padding: 0.4em;
-	}
-	.create-wallet-modal input{
-		padding: 0.4em;
-
-	}
-	.fund-wallet-modal{
-		width: 60%;
-		left: 10%;
-	}
-}
-
-@media(max-width:360px){
-	.create-wallet-modal{
-		left: 0%;
-		top: 10px;	
-	}
-	.create-wallet-modal label{
-		display: inline-block;
-		float: left;
-		clear: left;
-		text-align: right;
-		padding: 0.6em 1em;
-		margin-top: 10px;	
-	}
-	
-	.create-wallet-modal input{
-		display: inline-block;
-		float: right;
-		padding: 0.6em 2em;
-		margin-top: 10px;
-		border-radius: 4px;
-		border: 1px solid rgb(182, 182, 182);
-		outline: none;	
-	}
-	.fund-wallet-modal{
-		width: 60%;
-		left: 10%;
-		top: 100px;
-	}
-	
-}
 
 
 /* /////////////////////////////////////////////////////D A S H B O A R D///////////////////////////////////////////////////////// */
 
-.dashboard-div{
-	padding-top: 100px;
-	background-color: rgb(241, 241, 241);
-	/* height: 100%; */
-	
-}
-.dashboard-div .div-1{
-	display: flex;
-	align-items: center;
-	justify-content: space-evenly;
-	flex-wrap: wrap;
-	width: 100%;
-	margin-left: 100px;
-	/* margin: auto; */
-}
-.dashboard-div .div-1 .balance-box{
-	/* border: 1px solid black; */
-	background-color: white;
-	width: 20%;
-	padding: 0.5em 0em 0.5em 0.7em;
-	box-shadow: 1px 1px 3px 0px;
-	border-radius: 4px;
-
-}
-.dashboard-div .div-1 .balance-box .heading{
-	font-size: 18px;
-	/* color: rgb(60, 139, 139); */
-}
-
-.dashboard-div .div-1 .balance-box .amount{
-	font-size: 20px;
-	font-weight: 700;
-	text-align: center;
-}
-.dashboard-div .div-1 .balance-box .initial{
-	font-weight: 400;
-	text-align: center;
-}
-
-.dashboard-div .div-2{
-	border: 2px dashed rgb(60, 139, 139);
-	border-radius: 5px;
-	padding: 1em;
-	width: 40%;
-	margin: 100px auto;
-	text-align: center;
-}
-.dashboard-div .div-2  .heading{
-	font-size: 20px;
-	font-weight: 700;
-}
-
-.dashboard-div .div-2  .detail{
-	font-size: 18px;
-}
-.dashboard-div .div-2  .number{
-	margin-top: 200px;
-}
-
-.fa-copy{
-	background-color: rgb(190, 241, 241);
-	color: teal;
-	font-family: Arial, Helvetica, sans-serif;
-	padding: 0.2em 0.5em;
-	border-radius: 6px;
-	cursor: pointer;
-}
-.fa-copy:active{
-	transform: scale(1.1);
-}
-
-/* .dashboard-div .div-2 .copy-success{
-	background-color: rgb(29, 29, 29);
-	color: white;
-	padding: 0.5em;
-	position: fixed;
-	text-align: center;
-	width: 50%;
-	z-index: 1;
-	top: 70px;
-} */
-
-.dashboard-div .div-3{
-	margin-top: 100px;
-	width: 80%;
-	margin-left: 280px;
-	padding-bottom: 50px;
-}
-.dashboard-div .div-3 .transaction-initial{
-   text-align: center;
-   background-color: rgb(231, 231, 231);
-   height: 10vh;
-   padding: 10%;
-}
-
-
-.transaction-button{
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	padding: 0em 0.5em;
-}
-.transaction-button button{
-	font-size: 18px;
-	padding: 0.4em 0.7em;
-	cursor: pointer;
-	color: white;
-	background-color: rgb(46, 46, 46);
-	border: 1px solid rgb(145, 145, 145);
-	border-radius: 4px;
-}
-.transaction-button button:hover{
-	background-color: rgb(70, 70, 70);
-	color: white;
-	border: 1px solid rgb(145, 145, 145);
-	border-radius: 4px;
-}
-
-.transaction-button h3{
-	font-size: 30px;
-	
-}
-
-.table{
-    padding: 20px;
-	text-align: center;	
-}
-
-#t01 th{
-    background-color:  rgb(43, 126, 126);
-	color: white;
-	padding: 1em;
-}
-
-#t01 tr {
-    border-top: 1px solid rgb(150, 141, 141);
-    border-bottom: 1px solid rgb(150, 141, 141);
-    border-radius: 15px;
-}
-
-
-table, th, td{
-	border-collapse: collapse;
-	font-size: 18px;
-	padding: 10px;
-	text-align: center;
-}
-
-table tbody tr:nth-child(odd){
-	/* background-color: white; */
-	/* box-shadow: 1px 0px 3px 0px; */
-}
-
-table tbody tr:nth-child(even){
-	background-color: rgb(255, 255, 255);
-	/* box-shadow: 1px 0px 3px 0px; */
-}
-
-/* th,td{
-    
-} */
-
-
-@media(max-width:1200px){
-	.dashboard-div .div-1{
-		margin-left: 0;
-	}
-	.dashboard-div .div-2{
-		margin-left:130px;
-		width: 70%;
-	}
-	.dashboard-div .div-3{
-		margin-left: 100px;
-	}
-	table, th, td{
-		font-size: 15px;
-	}
-}
-
-
-
-@media(max-width:800px){
-	.dashboard-div .div-1 .balance-box{
-		width: 80%;
-		margin-top: 30px;
-	}
-
-	.dashboard-div .div-2{
-		margin-left: 100px;
-		width: 70%;
-	}
-
-	.dashboard-div .div-3{
-		width: 100%;
-		margin-left: 0px;
-		/* overflow-x: scroll; */
-	}
-	 .dashboard-div .div-3 .transaction-div .transaction-table{
-		 /* margin-left: 100px; */
-		overflow-x: scroll;
-	} 
-	.transaction-button button{
-		font-size: 15px;
-	}
-	.transaction-button h3{
-		font-size: 25px;
-	}
-	
-}
-
-@media(max-width:700px){
-	.dashboard-div .div-2{
-		margin-left: 45px;
-	}
-
-}
 
 
 
